naaando_console_command_files = files(
    '../src/Commands.vala',
    '../src/command/BaseCommand.vala',
    '../src/command/ClosureCommand.vala',
    '../src/interfaces/ICommand.vala',
    '../src/interfaces/ICommandContainer.vala',
    '../src/interfaces/IRequest.vala',
    '../src/interfaces/IUseRequest.vala',
    '../src/requests/BaseRequest.vala'
)